# tumor-detection

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  breast-cancer-classification.ipynb  docker-compose.yml  main.py  model.py  pyproject.toml  requirements.txt
data/: test.csv
models/: model_documentation.md
